# cc-wait

./: .gitignore  CLAUDE.md  Dockerfile  HISTORY.md  Justfile  README.md  cc-wait-dashboard.service  docker-compose.yml  install.sh  pyproject.toml  test_hook.py  uninstall.sh  wait_for_limits.py
src/cc_wait/: __init__.py  __main__.py  cli.py  daemon.py  hook.py  oauth.py  schema.py  server.py  tmux.py  tracing.py  wrapper.sh
tests/: test_hook.py  test_oauth.py  test_schema.py  test_tmux.py
